Se agrego tarjeta de Git

--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
                 <div class="card-header"><i class="bi bi-star-fill"></i></div>
                   <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/1200px-Python-logo-notext.svg.png" class="card-img-top" alt="Responsive image">
                 <div class="card-body">
-                  <h4 class="card-title" data-toggle="tooltip" data-placement="top" title="Es gratis, Open source">Python</h4>
-                  <h6 class="card-subtitle text-muted">Leguaje de programacion</h6>
-                  <p class="card-text">Creador: Guido van Rossum</p>
+                  <h4 class="card-title" data-toggle="tooltip" data-placement="top" title="Es gratis, Open source">Git</h4>
+                  <h6 class="card-subtitle text-muted">Control de versiones</h6>
+                  <p class="card-text">Creador: Linus Torvalds</p>
                   <p class="card-text"><small class="text-muted">Recomendado por Rafael Chaidez Rosas</small></p>
-                  <a href="https://www.python.org/" target="_blank" class="btn btn-info" role="button" aria-pressed="true">Entrar</a>
+                  <a href="https://git-scm.com/" target="_blank" class="btn btn-info" role="button" aria-pressed="true">Entrar</a>
                 </div>
               </div>
 
