Revert "Se agrego html crrafael y modifico lista"
This reverts commit 737cb9167160588617d523f663604bb6fb5b357a.

--- a/lista.html
+++ b/lista.html
@@ -46,9 +46,9 @@
                     <tbody>
                         <tr>
                             <td>123456789</td>
-                            <td>Rafael Chaidez</td>
+                            <td>Alumno Ejemplo</td>
                             <td>
-                                <a href="./crrafael.html" class="btn btn-secondary btn-sm active" role="button" aria-pressed="true">Entrar</a>
+                                <a href="./plantilla.html" class="btn btn-secondary btn-sm active" role="button" aria-pressed="true">Entrar</a>
                             </td>
                         </tr>
                     </tbody>
