--- a/lista.html
+++ b/lista.html
@@ -48,7 +48,7 @@
                             <td>123456789</td>
                             <td>Alumno Ejemplo</td>
                             <td>
-                                <a href="./plantilla.html" class="btn btn-secondary btn-sm active" role="button" aria-pressed="true">Entrar</a>
+                                <a href="./crrafael.html" class="btn btn-secondary btn-sm active" role="button" aria-pressed="true">Entrar</a>
                             </td>
                         </tr>
                     </tbody>
